[tool.poetry]
name = "pixyverse-dev"
version = "0.1.0"
description = ""
authors = ["Pradeep Roark <pradeep.roark@gmail.com>"]
readme = "README.md"
packages = [{include = "pixyverse"}]

[tool.poetry.dependencies]
python = "^3.12"
pixyverse-render-html = "^0.1.5"
pygments = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
